--- a/intranet/htdocs/intranet-tmpl/admin/permisos/permisos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/permisos/permisos.tmpl
@@ -7,9 +7,43 @@
                                     IdInputHidden: 'nro_socio_hidden', 
                                  });
     });
+
+	/*
+	* Actualiza todos los input checkbox ocultos para actualizar bien en el backend
+	*/
+	function actualizarCheckBoxes(nombre){
+
+	    var checked = $('#'+nombre).find('.active');
+
+	    // checked.text() tiene los nombres de los checkeados separados por un espacio
+	    var arrayText = checked.text().split(" ");
+
+	    //recorremos todos los textos que esten seleccionados
+	    for(text in arrayText){ 
+	        switch(arrayText[text])
+	        {
+	        case "[% "Todos" | i18n %]":
+	            $('#'+nombre+'_todos').attr('checked', 'checked');
+	            break;
+	        case "[% "Baja" | i18n %]":
+	            $('#'+nombre+'_baja').attr('checked', 'checked');
+	            break;
+	        case "[% "Modificación" | i18n %]":
+	            $('#'+nombre+'_modif').attr('checked', 'checked');
+	            break;
+	        case "[% "Alta" | i18n %]":
+	            $('#'+nombre+'_alta').attr('checked', 'checked');
+	            break;
+	        case "[% "Consulta" | i18n %]":
+	            $('#'+nombre+'_consulta').attr('checked', 'checked');
+	            break;
+	        }
+
+	    }
+	}
 </script>
 
-<div class="title">[% "Administraci&oacute;n de permisos" | i18n %]</div>
+<h3>[% "Administraci&oacute;n de permisos" | i18n %]</h3>
 
 [% INCLUDE "partials/admin/_permisos.inc" %]
 
