--- a/intranet/htdocs/intranet-tmpl/informacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/informacion.tmpl
@@ -1,7 +1,7 @@
 [% INCLUDE "intranet-top.inc" %] 
 
 <div class="form-actions"> 
-    <a class="btn btn-warning" href="#" onclick="history.back()">[% 'Volver a intentar' | i18n %] </a>
+    <a class="btn btn-warning" href="[% url_prefix %]/mainpage.pl">[% 'Volver a intentar' | i18n %] </a>
 </div>
 
 [% INCLUDE "intranet-bottom.inc" %]
