--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -268,7 +268,7 @@
                                                                                 [% IF show_action == 1 %]
                                                                                     {title => "Agregar anal&iacute;tica", action=>"agregarAnalitica([% id2 %])", icon=>"icon-edit"},
                                                                                 [% END %]
-                                                                                [% IF show_analiticas == 1 %]
+                                                                                [% IF show_analiticas > 0 %]
                                                                                     {title => "Ver anal&iacute;ticas", action=>"verAnaliticas([% id2 %])", icon=>"icon-edit"},
                                                                                 [% END %]
 		                                                                            ],
