--- a/intranet/htdocs/intranet-tmpl/admin/logosUI.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/logosUI.tmpl
@@ -7,7 +7,7 @@
         objAH.debug         = true;
         objAH.showOverlay   = true;
         objAH.url           = URL_PREFIX+'/admin/logosDB.pl';
-        objAH.tipoAccion    = 'LISTAR';
+        objAH.tipoAccion    = 'LISTAR_UI';
         objAH.sendToServer();
     }
 
@@ -23,7 +23,7 @@
 	    objAH.url               = URL_PREFIX+'/admin/logosDB.pl';
 	    objAH.idLogo            = id;
 	    objAH.context           = 'intranet';
-	    objAH.tipoAccion        = 'DEL_LOGO';
+	    objAH.tipoAccion        = 'DEL_LOGO_UI';
 	    objAH.sendToServer();
 	}
 	
