--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -110,14 +110,14 @@ $(document).ready( function() {
     $('#datos_indice').hide();
 
 // FIXME se hace ne los dos casos ahora parece
-    if(MODIFICAR) {
-//         $('#datos_del_leader').hide();
-    } else {
-        // alert("entro aca");
-        // mostrarEstructuraDelNivel1();
-//         $('#datos_del_leader').show();
-//         $('#datos_del_leader').hide();
-    }
+//     if(MODIFICAR) {
+// //         $('#datos_del_leader').hide();
+//     } else {
+//         // alert("entro aca");
+//         // mostrarEstructuraDelNivel1();
+// //         $('#datos_del_leader').show();
+// //         $('#datos_del_leader').hide();
+//     }
     
 } );
 
