--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleTablaVisualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleTablaVisualizacionIntra.tmpl
@@ -68,8 +68,8 @@
                                   id              => "visualizacionIntra_table",
                                   class           => "",
                                   selectAll_id    => "",
-                                  columns         => ['[% "Campo"|i18n %]','[% "Subcampo"|i18n %]','[% "Pre"|i18n %]',
-                                                    '[% "Vista INTRA" | i18n %]','[% "Post"|i18n %]','[% "Nivel"|i18n %]',
+                                  columns         => ['[% "Campo"|i18n %]','[% "Subcampo"|i18n %]','[% "Pre separador"|i18n %]',
+                                                    '[% "Vista INTRA" | i18n %]','[% "Pos separador"|i18n %]','[% "Nivel"|i18n %]',
                                                     '[% "Acciones"|i18n %]',
                                                      ]
 
