--- a/intranet/htdocs/intranet-tmpl/admin/logos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/logos.tmpl
@@ -2,42 +2,79 @@
 
 <script type="text/javascript">
 
-    function listarLogos(){
-        objAH               =new AjaxHelper(updateListarLogos);
-        objAH.debug         = true;
-        objAH.showOverlay   = true;
-        objAH.url           = URL_PREFIX+'/admin/logosDB.pl';
-        objAH.tipoAccion    = 'LISTAR';
-        objAH.sendToServer();
-    }
+function listarLogos(){
+    objAH               = new AjaxHelper(updateListarLogos);
+    objAH.debug         = true;
+    objAH.showOverlay   = true;
+    objAH.url           = URL_PREFIX+'/admin/logosDB.pl';
+    objAH.tipoAccion    = 'LISTAR';
+    objAH.sendToServer();
+}
 
-    function updateListarLogos(responseText){
-        if (!verificarRespuesta(responseText))
-            return(0);
-        $('#logos_ajax').html(responseText);
-    }
-    
-    function eliminarLogo(id){
-	    objAH                   = new AjaxHelper(updateEliminarLogo);
-	    objAH.showOverlay       = true;
-	    objAH.url               = URL_PREFIX+'/admin/logosDB.pl';
-	    objAH.idLogo            = id;
-	    objAH.context           = 'intranet';
-	    objAH.tipoAccion        = 'DEL_LOGO';
-	    objAH.sendToServer();
-	}
-	
-	function updateEliminarLogo(responseText){
-	    if (!verificarRespuesta(responseText))
-            return(0);
-        listarLogos();
-	}
-    
-    $(document).ready(function() {
-        listarLogos();
-    });
+function updateListarLogos(responseText){
+    if (!verificarRespuesta(responseText))
+        return(0);
+    $('#logos_ajax').html(responseText);
+}
+
+function eliminarLogo(id){
+   objAH                   = new AjaxHelper(updateEliminarLogo);
+   objAH.showOverlay       = true;
+   objAH.url               = URL_PREFIX+'/admin/logosDB.pl';
+   objAH.idLogo            = id;
+   objAH.context           = 'intranet';
+   objAH.tipoAccion        = 'DEL_LOGO';
+   objAH.sendToServer();
+}
+
+function updateEliminarLogo(responseText){
+   if (!verificarRespuesta(responseText))
+    return(0);
+    indexLogos();
+}
+
+function listarLogosUI(){
+    objAH               = new AjaxHelper(updateListarLogosUI);
+    objAH.debug         = true;
+    objAH.showOverlay   = true;
+    objAH.url           = URL_PREFIX+'/admin/logosDB.pl';
+    objAH.tipoAccion    = 'LISTAR_UI';
+    objAH.sendToServer();
+}
+
+function updateListarLogosUI(responseText){
+    if (!verificarRespuesta(responseText))
+        return(0);
+    $('#logos_ajax_ui').html(responseText);
+}
+
+function eliminarLogoUI(id){
+    objAH                   = new AjaxHelper(updateEliminarLogoUI);
+    objAH.showOverlay       = true;
+    objAH.url               = URL_PREFIX+'/admin/logosDB.pl';
+    objAH.idLogo            = id;
+    objAH.context           = 'intranet';
+    objAH.tipoAccion        = 'DEL_LOGO_UI';
+    objAH.sendToServer();
+}
+
+function updateEliminarLogoUI(responseText){
+    if (!verificarRespuesta(responseText))
+        return(0);
+    indexLogos();
+}
+
+function indexLogos(){
+    listarLogos();
+    listarLogosUI();
+}
+
+$(document).ready(function() {
+    indexLogos();
+});
 </script>
 
 <div id="logos_ajax"></div>
+<div id="logos_ajax_ui"></div>
 
 [% INCLUDE 'intranet-bottom.inc' %]
