--- a/intranet/htdocs/intranet-tmpl/admin/logos_ajax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/logos_ajax.tmpl
@@ -20,12 +20,38 @@
 	    objAH.sendToServer();
 	}
 	
-	function updateModificarLogo(responseText){
-	    if (!verificarRespuesta(responseText))
-            return(0);
+  	function updateModificarLogo(responseText){
+  	    if (!verificarRespuesta(responseText))
+              return(0);
         $('#agregarLogoForm').html(responseText);
         $('#agregarLogoForm').modal();
-	}
+  	}
+
+    function agregarPortada_showUI(){
+        $('#agregarLogoUIForm').modal();
+    } 
+      
+    function submitFormUI(){
+        $('#agregarLogoUIForm').modal('hide');
+        startOverlay();
+        $('#agregarLogoUIForm').submit();
+    }
+    
+    function modificarLogoUI(id){
+      objAH                   = new AjaxHelper(updateModificarLogoUI);
+      objAH.showOverlay       = true;
+      objAH.url               = URL_PREFIX+'/admin/logosDB.pl';
+      objAH.idLogo            = id;
+      objAH.tipoAccion        = 'SHOW_MOD_LOGO_UI';
+      objAH.sendToServer();
+  }
+  
+  function updateModificarLogoUI(responseText){
+      if (!verificarRespuesta(responseText))
+            return(0);
+        $('#agregarLogoUI').html(responseText);
+        $('#agregarLogoUI').modal();
+  }
     
     $(document).ready(function() {
         $('.fancy_link').fancybox();
@@ -63,17 +89,10 @@
                                 
                                     [% PERL %]
                                         print C4::AR::Filtros::action_set_button(    
-                                              title   => " [% 'Editar' | i18n %]",
-                                              button  => 'btn btn-primary',
-                                              action  => "modificarLogo([% logo.id %])", 
-                                              icon    => "icon-white icon-edit",
-                                              actions         => [
-                                                                  { title   => "Eliminar", 
-                                                                    action  => 'eliminarLogo("[% logo.id %]")', 
-                                                                    icon    => "icon-remove",
-                                                                   },
-                                                                  ],
-
+                                              title   => " [% 'Eliminar' | i18n %]",
+                                              button  => 'btn btn-danger',
+                                              action  => "eliminarLogo([% logo.id %])", 
+                                              icon    => "icon-white icon-remove",
                      
                                                 ) ;
                                     [% END %]
