--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/historialReservas.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/historialReservas.tmpl
@@ -69,7 +69,7 @@
                                 [% reserva.getFecha_formateada %]
                             </td>
                             <td>
-                                [% reserva.getTipo_operacion %]
+                                [% reserva.getTipo_operacion | i18n %]
                             </td>
                           </tr>
                         [% END %] <!-- FOREACH PRIMERO -->
